[package]
name = "rtneural-rs"
version = "0.1.0"
edition = "2021"
crate-type = ["staticlib"]

[dependencies]
autocxx = "0.26.0"
cxx = { version = "1.0", features = ["c++20", "c++14", "c++17"] }


[build-dependencies]
cxx-build = "1.0"
bindgen = "0.65.1"
cmake = "0.1.50"
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
